recabilbrate offset and data-offset values for mobile, remove nav margin left and center nav, fix hamburger icon spacing issue

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -195,6 +195,10 @@ nav a:hover, .active {
   font-size: 19px;
 }
 
+#collapsibleNavbar {
+  justify-content: center;
+}
+
 /*****  Download Button  *****/
 .btn {
   text-decoration: none;
